--- a/views/zip_code.ejs
+++ b/views/zip_code.ejs
@@ -12,17 +12,16 @@
         </h1>
         <form action="/zip" method="POST">
             <label for="countries">Choose a country:</label>
-                <select name="country" id="country" placeholder="Please select a Country" required>
+                <select name="country" id="countryName" placeholder="Please select a Country" required>
                 <option value="ES">Spain</option>
-                <option value="IT">Italy</option>
-                <option value="FR">France</option>
                 <option value="JP">Japan</option>
                 <option value="GU">Guam</option>
-                <option value="GB">Great Britain</option>
-                <option value="IS">Iceland</option>
-                <option value="US">United States</option>
-                <option value="ZA">South Africa</option>
                 <option value="PR">Puerto Rico</option>
+                <option value="IS">Iceland</option>
+                <option value="IT">Italy</option>
+                <option value="FR">France</option>                
+                <option value="GB">Great Britain</option>
+                <option value="US">United States</option>
                 </select>
                 <br><br>
             <input type = "number" name="zipcode" id= "zip" placeholder="Please enter a zipcode" required>
