--- a/views/static/styles.ejs
+++ b/views/static/styles.ejs
@@ -3,13 +3,15 @@
         -ms-text-size-adjust: 100%;
         -webkit-text-size-adjust: 100%;
         margin: 0; 
-        background-color: azure;
+        background-color: rgb(172, 88, 154);
         
     }
       
     body {
         margin: 0; 
-        background-color: azure;
+        background-color: rgb(172, 88, 154);
+        text-align: center;
+        padding-top: 13em;
     }
     .nav {
         font-size: 50px;
@@ -19,12 +21,12 @@
     }
     .nav-link{
         text-decoration: none;
-        color: #ff9124;
     }
     .main {
         margin-left: 64em;
         margin-top: 7em;
      }
+
     .main1 {
         margin-left: 60em;
         margin-top: 7em;
